// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormLabel > should render & hover if optional 1`] = `
<DocumentFragment>
  <label
    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
    data-testid="FormLabel"
  >
    Test
    <span>
      <span>
        <span
          class="ml-1 text-theme-secondary-500 dim:text-theme-dim-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </span>
    </span>
  </label>
</DocumentFragment>
`;

exports[`FormLabel > should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
    data-testid="FormLabel"
    for="test"
  >
    Test Label
  </label>
</DocumentFragment>
`;
